--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
             </div>
         </div>
         <div id="my-pic">
-            <img src="../personal site/assets/myPic2.jpg">
+            <img src="../assets/myPic2.jpg">
         </div>
     </div>
     <div class="socials">
         <a href="https://www.linkedin.com/in/samyak-jain/-38440621b"><div class="linkedin">
             <div class="symbol">
-                <img src="../personal site/assets/linkedin.png">
+                <img src="../assets/linkedin.png">
             </div>
             <div class="text">LinkedIn</div>
         </div></a>
        <a href="https://www.instagram.com/samyak_1612"><div class="instagram">
             <div class="symbol">
-                <img src="../personal site/assets/insta.png">
+                <img src="../assets/insta.png">
             </div>
            <div class="text">Instagram</div>
         </div></a>
       <a href="https://github.com/samyak1612"><div class="github">
             <div class="symbol">
-                <img src="../personal site/assets/github.png">
+                <img src="../assets/github.png">
             </div>
             <div class="text">GitHub</div>
         </div></a>
