--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="../personal site/assets/logo2_no_bg.png">
+            <img src="../assets/logo2_no_bg.png">
         </div>
         <nav>
             <div class="navigation">
