--- a/certificates.html
+++ b/certificates.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="../personal site/assets/logo2.png">
+            <img src="assets/logo2.png">
         </div>
         <nav>
             <div class="navigation">
@@ -24,7 +24,7 @@
     <main class="certificates">
         <div id="r1">
             <div id="c-for-everyone">
-                <div class="image"><img src="../personal site/assets/certi1.png"></div>
+                <div class="image"><img src="assets/certi1.png"></div>
                 <div class="caption">
                     C for Everyone
                 </div>
