--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <div class="row1">
         <div id="intro"><p class="code">Hello World !</p> I am Samyak Jain. I am <strong>java</strong> and <strong>web</strong> developer, researcher with a keen interest in <strong>Deep Learning</strong> and <strong>Computer Vision</strong>.
-            <div class="button">
+            <div class="button boxes">
                 <a href="connect.html" class="button-text code">About Me</a>
             </div>
         </div>
