--- a/certificates.html
+++ b/certificates.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="../personal site/assets/logo2.png">
+            <img src="assets/logo2.png">
         </div>
         <nav>
             <div class="navigation">
