--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div id="logo">
-            <img src="../personal site/assets/logo2_no_bg.png">
+            <img src="assets/logo2_no_bg.png">
         </div>
         <nav>
             <div class="navigation">
