--- a/certificates.html
+++ b/certificates.html
@@ -22,6 +22,9 @@
         </nav>
     </header>
     <main class="certificates">
+        <h1>
+            Certificates
+        </h1>
         <div class="row1 boxes">
             <a href="https://www.coursera.org/account/accomplishments/certificate/9XJUH9LYP245"> <div class="c1">
                 <div class="image"><img src="assets/certi1.png"></div>
