--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div class="row1">
-        <div id="intro"><p class="code">Hello World !</p> I am Samyak Jain. I am <strong>java</strong> and <strong>web</strong> developer, researcher with a keen interest in <strong>Deep Learning</strong> and <strong>Computer Vision</strong>.
+        <div id="intro"><p class="code big">Hello World !</p> I am Samyak Jain. I am <strong>java</strong> and <strong>web</strong> developer, researcher with a keen interest in <strong>Deep Learning</strong> and <strong>Computer Vision</strong>.
             <div class="button boxes">
                 <a href="connect.html" class="button-text code">About Me</a>
             </div>
