--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row1">
         <div id="intro"><p class="code big">Hello World !</p> I am Samyak Jain. I am <strong>java</strong> and <strong>web</strong> developer, researcher with a keen interest in <strong>Deep Learning</strong> and <strong>Computer Vision</strong>.
             <div class="button boxes">
-                <a href="connect.html" class="button-text code">About Me</a>
+                <a href="https://flowcv.com/resume/er50fubcht" class="button-text code">Resume</a>
             </div>
         </div>
         <div id="my-pic">
